# firework

./: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.history/: docker-compose_20240919102812.yml  docker-compose_20240919102847.yml  docker-compose_20240919102900.yml  docker-compose_20240919103042.yml  docker-compose_20240919103054.yml  docker-compose_20240919103223.yml  docker-compose_20240919103248.yml  docker-compose_20240919103353.yml  docker-compose_20240919103402.yml  docker-compose_20240919103538.yml  docker-compose_20240919103651.yml  docker-compose_20240919103808.yml  dockerfile_20240919102719  dockerfile_20240919102914
.history/app/public/: index_20240919095715.html  index_20240919105114.html
api/: config.py  database.py  main.py  migrate_db.py  models.py
api/static/: client.html  firework.js  host.html
app/: app.js  server.js
app/public/: client.html  host.html  index.html
