[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
pydantic = "^2.9.0"
asyncpg = "^0.29.0"
pytz = "^2024.2"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
